--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base{
+    html{
+        font-family: 'Raleway',sans-serif;
+        color: black;
+    }
+}
